--- a/STT/requirements.txt
+++ b/STT/requirements.txt
@@ -1,1 +1,9 @@
-django >=1.9, <2
+Django==1.11.9 <2
+django-filter==1.1.0
+djangorestframework==3.7.7
+djangorestframework-jwt==1.11.0
+Markdown==2.6.11
+pip==9.0.1
+PyJWT==1.5.3
+pytz==2017.3
+setuptools==28.8.0
