--- a/STT/requirements.txt
+++ b/STT/requirements.txt
@@ -1,10 +1,11 @@
-Django==1.11.9
+Django==2.0.2
 django-filter==1.1.0
+django-pyodbc-azure==2.0.1.0
 djangorestframework==3.7.7
 djangorestframework-jwt==1.11.0
 Markdown==2.6.11
-pip==9.0.1
 PyJWT==1.5.3
-pytz==2017.3
-setuptools==28.8.0
 pyodbc==4.0.22
+pytz==2017.3
+pip==9.0.1
+setuptools==28.8.0
