--- a/STT/client/package.json
+++ b/STT/client/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^5.0.0",
     "angular2-jwt": "^0.2.3",
     "core-js": "^2.4.1",
+    "npm": "^5.7.1",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
