--- a/STT/client/package.json
+++ b/STT/client/package.json
@@ -21,6 +21,10 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/effects": "^5.2.0",
+    "@ngrx/store": "^5.2.0",
+    "@ngrx/store-devtools": "^5.2.0",
     "angular2-jwt": "^0.2.3",
     "core-js": "^2.4.1",
     "npm": "^5.7.1",
